QoE Metrics fixed